// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast > CloseButton.vue should renders OXD ToastCloseButton 1`] = `
<div class="oxd-toast-close-container">
  <div class="oxd-toast-close oxd-toast-close--default" role="button" aria-label="Close"><span aria-hidden="true">×</span></div>
</div>
`;

exports[`Toast > CloseButton.vue should renders OXD ToastCloseButton error 1`] = `
<div class="oxd-toast-close-container">
  <div class="oxd-toast-close oxd-toast-close--error" role="button" aria-label="Close"><span aria-hidden="true">×</span></div>
</div>
`;

exports[`Toast > CloseButton.vue should renders OXD ToastCloseButton info 1`] = `
<div class="oxd-toast-close-container">
  <div class="oxd-toast-close oxd-toast-close--info" role="button" aria-label="Close"><span aria-hidden="true">×</span></div>
</div>
`;

exports[`Toast > CloseButton.vue should renders OXD ToastCloseButton success 1`] = `
<div class="oxd-toast-close-container">
  <div class="oxd-toast-close oxd-toast-close--success" role="button" aria-label="Close"><span aria-hidden="true">×</span></div>
</div>
`;

exports[`Toast > CloseButton.vue should renders OXD ToastCloseButton warn 1`] = `
<div class="oxd-toast-close-container">
  <div class="oxd-toast-close oxd-toast-close--warn" role="button" aria-label="Close"><span aria-hidden="true">×</span></div>
</div>
`;
